turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:7: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.red);
        ^Source:9: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.yellow);
        ^Source:11: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.pink);
        ^