turtleart.lessons.turtleart.Main.DiskFour.scala.code

override def run() {


	gribouille();
	setCouleurBrosse(Color.red);
	gribouille();
	setCouleurBrosse(Color.yellow);
	gribouille();
	setCouleurBrosse(Color.pink);
	gribouille();
}
def gribouille(){
		baisseCrayon();
for(i <- 1 to 90)
{
	avance(100);
	recule(100);
	droite(1);
}
}

